--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,6 @@
   <title>Основы JavaScript</title>
 </head>
 <body>
-  <script src="script.js"></script>
-  <h1>Основы</h1>	
+  <p>Test2</p>
 </body>
 </html>
